--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -16,11 +16,18 @@
                 <li><a href="pages/contacts.html">Контакты</a></li>
             </ul>
         </div>
-        <div id="content">
-            <p>Электронная почта : qwertyyu@mail.ru</p>
-            <p>Мой телефон сотовый : 12345678900220</p>
-            
-        </div>
-         <div id="Совсем низ ">Футер</div>
+        <div class="content">
+                <div class="contacts-container">
+                    <h2 class="section-title">Контакты</h2>
+                    <div class="contact-info">
+                        <p>Адрес электронной почты: qwertyhd.com</p>
+                    </div>
+                    <div class="contact-info">
+                        <p>Адрес: г. Москва, дом 1</p>
+                    </div>
+                    <button class="contact-button">Позвоните мне</button>
+                </div>
+            </div>
+         <div class="footer">Дно</div>
     </body>
 </html>
