--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ href="pages/contacts.html">Контакты</a></li>
                     <h1 class="profile-title">Информация об авторе</h1>
                     <img class="profile-photo" src="images/photo.png" alt="Фото
 автора">
-                    <h2 class="profile-name">Иванов Иван Иванович</h2>
-                    <p class="profile-group">ЭФБО-00-00</p>
+                    <h2 class="profile-name">Светиков Максим Андреевич</h2>
+                    <p class="profile-group">ЭФБО-16-24</p>
                 </div>
 
                 <div class="about-me">
