--- a/pages/goods.html
+++ b/pages/goods.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="page-container">
-            <div class="header">Верхушка</div>
+            <div class="header">Верх</div>
             <div class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
@@ -28,16 +28,16 @@
                     <div class="product-card">
                         <img class="product-image" src="../images/goods2.jpg" alt="Фото товара 2">
                         <h3 class="product-name">Штука чтобы была</h3>
-                        <p class="product-price">35 000 $</p>
+                        <p class="product-price">0 Р</p>
                     </div>
                     <div class="product-card">
                         <img class="product-image" src="../images/goods3.jpg" alt="Фото товара 3">
                         <h3 class="product-name">Сам не понял что это</h3>
-                        <p class="product-price">1 500 000 $</p>
+                        <p class="product-price">15Р</p>
                     </div>
                 </div>
             </div>
-            <div class="footer">Дно</div>    
+            <div class="footer">низ</div>    
         </div>
     
 </body></html>
