--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
     </head>
     <body>
         <div class="page-container">
-            <div class="header">Хэдер</div>
+            <div class="header">Верх</div>
             <div class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link"
 href="index.html">Главная</a></li>
                     <li class="nav-item"><a class="nav-link"
 href="pages/news.html">Новости</a></li>
-                    <li class="nav-item"><a class="nav-link"
-href="pages/practices.html">Практики</a></li>
                     <li class="nav-item"><a class="nav-link"
 href="pages/goods.html">Товары</a></li>
                     <li class="nav-item"><a class="nav-link"
@@ -61,7 +59,7 @@ href="pages/contacts.html">Контакты</a></li>
                     </div>  
                 </div>
             </div>
-            <div id="Совсем низ ">Футер</div>
+            <div id="Совсем низ ">низ</div>
         </div>
     </body>
 </html>
