--- a/pages/news.html
+++ b/pages/news.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="page-container">
-            <div class="header">Верхушка</div>
+            <div class="header">Верх</div>
             <div class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer">Дно</div>    
+            <div class="footer">низ</div>    
         </div>
     
 </body></html>
